# audiotopia

./: README.md  manage.py  pyproject.toml
ai/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
ai/migrations/: 0001_initial.py
ai/models/: category.py  licence.py  modeling.py
ai/serializers/: category_serializers.py  licence_serializers.py  modeling_serializers.py
ai_aggregate/: apps.py
audiotopia/: asgi.py  settings.py  urls.py  wsgi.py
base/: managers.py  models.py  serializers.py
flow/: audio.rttm  test.ipynb  test.py
flow/flows/: speaker_diarization_flows.py
flow/tasks/: speaker_diarization_tasks.py
media/: models.py
media/migrations/: 0001_initial.py
ugc/: managers.py  models.py  serializers.py  urls.py  views.py
ugc/migrations/: 0001_initial.py
ugc/models/: score.py  tag.py  topic.py
ugc/serializers/: score_serializers.py  tag_serializers.py  topic_serializers.py
